# draft

./: .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  README.md  REWORK.md  SPRINT_PLAN.md  eslint.config.js  justfile  package.json  pill.html  settings.html  vite.config.ts
.claude/: launch.json  settings.local.json
.github/workflows/: release.yml
.superpowers/brainstorm/516-1775063752/content/: design-overview.html  directions.html  nav-options.html  nav-refined.html
.superpowers/brainstorm/516-1775063752/state/: server-stopped
.superpowers/brainstorm/567-1775068729/state/: server-stopped
docs/: TODO.md  VULKAN_GPU_PLAN.md  WHISPER_BUILD_ISSUE.md
docs/superpowers/plans/: 2026-03-30-multi-engine-stt.md  2026-03-31-auto-updater.md  2026-03-31-ci-release-workflow.md  2026-04-01-ui-overhaul.md  2026-04-01-version-history-browser.md
docs/superpowers/specs/: 2026-03-30-multi-engine-stt-design.md  2026-03-31-auto-updater-design.md  2026-03-31-ci-release-workflow-design.md  2026-04-01-ui-overhaul-design.md  2026-04-01-version-history-browser-design.md
src/: index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: autostart.rs  config.rs  events.rs  lib.rs
src-tauri/src/audio/: amplitude.rs  buffer.rs  capture.rs  devices.rs  mod.rs  resampler.rs  worker.rs
src-tauri/src/history/: commands.rs  db.rs  mod.rs
src-tauri/src/injection/: clipboard.rs  focus.rs  mod.rs  text.rs
src-tauri/src/llm/: client.rs  commands.rs  mod.rs  process.rs
src-tauri/src/recording/: commands.rs  hotkey.rs  mod.rs  state.rs
src-tauri/src/sound/: mod.rs  playback.rs
src-tauri/src/stt/: commands.rs  download.rs  engine.rs  file.rs  mod.rs  models.rs  whisper.rs
src-tauri/src/stt/online/: assemblyai.rs  deepgram.rs  elevenlabs.rs  mod.rs  openai.rs  wav.rs
src-tauri/src/updater/: commands.rs  mod.rs  state.rs
src/components/: Spinner.tsx  WaveformBars.tsx
src/components/ui/: dropdown-menu.tsx  progress.tsx  select.tsx  sheet.tsx  slider.tsx
src/pill/: PillApp.tsx  main.tsx  pill.css
src/pill/components/: Spinner.tsx  Waveform.tsx
src/settings/: AmplitudeVisualizer.tsx  SettingsApp.tsx  main.tsx  useModels.ts  useWhisper.ts
src/settings/components/: ApiKeyInput.tsx  ErrorMessage.tsx  HotkeyInput.tsx  ModelsCard.tsx  PageHeader.tsx  SectionDivider.tsx  SectionHeader.tsx  SettingRow.tsx  SettingsCard.tsx  Sidebar.tsx  StatusCard.tsx  SubTabBar.tsx  TabBar.tsx  Toggle.tsx  UpdateCard.tsx
src/settings/components/models/: AllModelsCollapsible.tsx  DownloadableModel.tsx  ModelItem.tsx  ModelStatusArea.tsx  TierPicker.tsx  tierConfig.ts
src/settings/hooks/: useConfig.ts  useDarkMode.ts  useFileTranscription.ts  useHistory.ts  useHotkeyRegistration.ts  useMicrophoneTest.ts  useMicrophones.ts  useUpdateStatus.ts
src/settings/pages/: AdvancedPage.tsx  DebugPage.tsx  GeneralPage.tsx  HelpPage.tsx  HistoryPage.tsx  HomePage.tsx  InfoPage.tsx  ModelsPage.tsx  MorePage.tsx  PostProcessPage.tsx  SettingsPage.tsx  TranscribePage.tsx
src/shared/constants/: events.ts  providers.ts
src/shared/types/: audio.ts  config.ts  history.ts  models.ts  updater.ts
src/shared/utils/: formatModelName.ts  parseApiError.ts  tauriListeners.ts
tests/sprint0/test-cpal/: Cargo.toml
tests/sprint0/test-cpal/src/: main.rs
tests/sprint0/test-enigo/: Cargo.toml
tests/sprint0/test-enigo/src/: main.rs
tests/sprint0/test-whisper/: Cargo.toml
tests/sprint0/test-whisper/src/: main.rs
tests/sprint0/test-windows-focus/: Cargo.toml
tests/sprint0/test-windows-focus/src/: main.rs
