[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"

# Sprint 0 Task 0.4: Tauri v2 plugins verification
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"

# Sprint 1 dependencies (used now)
dirs = "6.0"  # For %APPDATA% path resolution

# Sprint 2 dependencies (audio pipeline)
cpal = "0.17"
rubato = "1.0"
audioadapter-buffers = "2.0"
crossbeam = "0.8"

# Sprint 3 dependencies (model download/management)
reqwest = { version = "0.12", features = ["stream"] }
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["fs"] }

# Sprint 4 dependencies (Whisper integration)
whisper-rs = "0.15"

# Sprint 6 dependencies (Text injection)
enigo = "0.6"
windows = { version = "0.62", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

# Release profile optimizations for whisper-rs native code performance
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Also optimize dependencies in release mode
[profile.release.package."*"]
opt-level = 3
