[package]
name = "app"
version = "1.0.4"
description = "Push-to-talk dictation for Windows"
authors = ["Reuzehagel"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"

# Sprint 0 Task 0.4: Tauri v2 plugins verification
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"

# Sprint 1 dependencies (used now)
dirs = "6.0"  # For %APPDATA% path resolution

# Sprint 2 dependencies (audio pipeline)
cpal = "0.17"
rubato = "1.0"
audioadapter-buffers = "2.0"
crossbeam = "0.8"

# Sprint 3 dependencies (model download/management)
reqwest = { version = "0.12", features = ["stream", "json", "multipart"] }
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["fs"] }

# Sprint 6 dependencies (Text injection)
enigo = "0.6"
arboard = "3"
windows = { version = "0.62", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_System_Registry"] }

# Sound effects
rodio = "0.20"

# History database
rusqlite = { version = "0.31", features = ["bundled"] }

# File transcription dependencies
symphonia = { version = "0.5.5", features = ["mp3", "aac", "flac", "ogg", "wav", "pcm", "isomp4", "aiff"] }
tauri-plugin-dialog = "2.6.0"

# Auto-updater
tauri-plugin-updater = "2"

# Archive extraction for ONNX model packages
tar = "0.4"
flate2 = "1.0"

[target.'cfg(windows)'.dependencies]
transcribe-rs = { version = "0.3", features = ["whisper-cpp", "ort-directml"] }
# TODO: Switch whisper-cpp to whisper-vulkan after installing Vulkan SDK

# Release profile optimizations
[profile.release]
opt-level = 3
lto = "thin"
strip = true
